<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customshape"
    tools:context=".about_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollIndicators="bottom"
        android:scrollbarSize="30dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/about_page"
                android:textSize="20dp"
                android:textColor="#000"/>

            <!--            Start of credits-->

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:layout_gravity="center"
                android:textSize="30dp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/citris"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/citrisLogoAbout"
                android:layout_width="wrap_content"
                android:layout_height="142dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/citris_logo" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kali"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="155dp"
                android:layout_height="121dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/kali_trzesniewski" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/susan"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="149dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/susan_ebeler" />
        </LinearLayout>
        android:text="TextView" />
    </FrameLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>